test/TestPhases/causality/invalid/functionInputOutputAliasing3.blc
function f(x: int32)(y: int32) returns int32
    y = 2
    y = x + y
    return y
end

@[EntryPoint]
activity A()() returns int32
    var b: int32 = 17
    var x = 0:int32
    x = f(b)(b) // assignment, rhs issue
    await true
    return 0
end 